Update: readme document

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
           </ul>
         </nav>
-        <button class="button | display-sm-none display-md-inline-flex"> <a href="./signup.html"> Signup</a></button>
+         <a href="./signup.html" class="button | display-sm-none display-md-inline-flex"> Signup</a>
       </div>
     </div>
   </header>
