--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
             <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
           </ul>
         </nav>
-        <a href="./signup.html">
-          <button class="button | display-sm-none display-md-inline-flex"> Signup
-          </button>
-        </a>
+        <a href="./signup.html" class="button | display-sm-none display-md-inline-flex"> Signup </a>
       </div>
     </div>
   </header>
@@ -58,10 +55,7 @@
             <p class="fs-300"><span>Ever young</span> site is for visitors who want to remain ever young,
               (anti-aging) or want to prevent premature ageing , heal themselves with
               organic means and natural products.</p>
-            <a href="./signup.html">
-              <button class="button">More info
-              </button>
-            </a>
+            <a href="./signup.html" class="button"> More info</a>
           </div>
           <div>
             <img src="./assets/images/main-bg.png" alt="an Image with fruits and people" class="padding-block-900"
@@ -84,9 +78,7 @@
             <p><span> Ever young</span> customers get a first hand advice or recomendation
               of products through our team. We don't just tell you what you should take
               or do but show you how to do it. At Ever young we have both young and ages as customers.</p>
-            <a href="./signup.html">
-              <button class="button">Read more</button>
-            </a>
+            <a href="./signup.html" class="button"> Read more</a>
           </div>
           <div class="flow text-center-sm-only margi">
             <img src="./assets/images/go-organics.png" alt=" an Image of a Yoga and  fruit basket">
@@ -95,10 +87,7 @@
               of cancer, heart attack, or promote their youthfullness by follwing
               simple instructions on how to mix or
               blend one or more products</p>
-            <a href="./signup.html">
-              <button class="button">Read more
-              </button>
-            </a>
+            <a href="./signup.html" class="button"> Read more </a>
           </div>
           <div class="flow text-center-sm-only margi">
             <img src="./assets/images/supplement-sppon.png" alt=" An image of omega">
@@ -106,31 +95,25 @@
             <p><span>It is best Practice </span>to supplement your meal or food you eat
               due to the fact that we cannot get all the nuritents required in a given meal.
               There are supplement products we recommend.....</p>
-            <a href="./signup.html">
-              <button class="button">Read more</button>
+            <a href="./signup.html" class="button"> Read more
             </a>
           </div>
         </div>
       </div>
     </section>
-
-
-
-    <section class="cta  padding-block-900 bg-accent-400 text-neutral-100">
+    <h2 class="cta  padding-block-900 bg-accent-400 text-neutral-100"> Call Us</h2>
       <div class="container">
         <div class="even-columns vertical-align-center">
           <div>
             <p class="fs-secondary-heading fw-bold text-center ">Invest in your health.</p>
           </div>
           <div class="justify-self-end-md" style="margin-right: 20%;">
-            <a href="tel:+4915214039314" style="color: brown;">
-              <button class="button" id="button-white" data-type="inverted">
-                call Us at+491-5214-039-314</button>
+            <a href="tel:+4915214039314" style="color: brown;" class="button" id="button-white" data-type="inverted">
+              call Us at+491-5214-039-314
             </a>
           </div>
         </div>
       </div>
-    </section>
   </main>
 
   <!-- Here is the markup for the footer-->
@@ -155,43 +138,45 @@
             </li>
           </ul>
         </div>
-        <div>
-
-          <nav class="footer-nav">
-            <ul>
-              <li><a href="index.html" aria-label="Go to the top page">Home</a></li>
-              <li><a href="blog.html" aria-label="Go to the Blog page">blog</a></li>
-              <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
-
-              <!-- These below are useful links that help me alot- I also encourage you to go through them-->
-              <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
-                  aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
-              </li>
-              <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
-                  aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
-              <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
-                  aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
-              <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
-                  aria-label="undraw page (opens in a new tab)"> undraw</a></li>
-              <li><a href="https://coolors.co" target="_blank" rel="noopener"
-                  aria-label="Visit  color palette page (opens in a new tab)"> palette
-                  generator</a></li>
-              <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
-                  aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
-              </li>
-              <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
-                  aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div>
-          <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-        </div>
       </div>
-    </footer>
+      <div>
+        <nav class="footer-nav">
+          <ul>
+            <li><a href="index.html" aria-label="Go to the top page">Home</a></li>
+            <li><a href="blog.html" aria-label="Go to the Blog page">blog</a></li>
+            <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
 
-        <!--fontawsone kit-->
-        <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-        <script src="./assets/main.js"></script>
+            <!-- These below are useful links that help me alot- I also encourage you to go through them-->
+            <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
+                aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
+            </li>
+            <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
+                aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
+            <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
+                aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
+            <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
+                aria-label="undraw page (opens in a new tab)"> undraw</a></li>
+            <li><a href="https://coolors.co" target="_blank" rel="noopener"
+                aria-label="Visit  color palette page (opens in a new tab)"> palette
+                generator</a></li>
+            <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
+                aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
+            </li>
+            <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
+                aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div>
+        <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+      </div>
+    </div>
+
+  </footer>
+
+  <!--fontawsone kit-->
+  <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+  <script src="./assets/main.js"></script>
 </body>
+
 </html>
