fix: blog responsivness

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <div class="flow">
             <h1 class="fs-secondary-heading fw-bold">Everything you need to
               know how to be in good health and remain Young.</h1>
-            <p class="fs-300"><span>Ever young</span> site is for visitors who want to remain ever young,
-              (anti-aging) or want to prevent premature ageing , heal themselves with
+            <p class="fs-600 "><span>Ever young</span> site is for visitors who want to remain ever young,
+              (anti-aging) or want to prevent premature ageing , heal themselves through
               organic means and natural products.</p>
             <a href="./signup.html" class="button"> More info</a>
           </div>
@@ -94,18 +94,18 @@
             <h2 class="fw-bold">Suppliment Your Food</h2>
             <p><span>It is best Practice </span>to supplement your meal or food you eat
               due to the fact that we cannot get all the nuritents required in a given meal.
-              There are supplement products we recommend.....</p>
+              There are supplement products we recommend</p>
             <a href="./signup.html" class="button"> Read more
             </a>
           </div>
         </div>
       </div>
     </section>
-    <h2 class="cta  padding-block-900 bg-accent-400 text-neutral-100"> Call Us</h2>
+    <div class="cta  padding-block-900 bg-accent-400 text-neutral-100">
       <div class="container">
         <div class="even-columns vertical-align-center">
           <div>
-            <p class="fs-secondary-heading fw-bold text-center ">Invest in your health.</p>
+            <h2 class="fs-secondary-heading fw-bold text-center ">Invest in your health.</h2>
           </div>
           <div class="justify-self-end-md" style="margin-right: 20%;">
             <a href="tel:+4915214039314" style="color: brown;" class="button" id="button-white" data-type="inverted">
@@ -114,7 +114,10 @@
           </div>
         </div>
       </div>
+    </div>
   </main>
+
+  <!-- Here is the markup for the footer-->
 
   <!-- Here is the markup for the footer-->
 
@@ -138,45 +141,42 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div>
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html" aria-label="Go to the top page">Home</a></li>
-            <li><a href="blog.html" aria-label="Go to the Blog page">blog</a></li>
-            <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
+        <div>
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="index.html" aria-label="Go to the top page">Home</a></li>
+              <li><a href="blog.html" aria-label="Go to the Blog page">blog</a></li>
+              <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
 
-            <!-- These below are useful links that help me alot- I also encourage you to go through them-->
-            <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
-                aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
-            </li>
-            <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
-                aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
-            <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
-                aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
-            <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
-                aria-label="undraw page (opens in a new tab)"> undraw</a></li>
-            <li><a href="https://coolors.co" target="_blank" rel="noopener"
-                aria-label="Visit  color palette page (opens in a new tab)"> palette
-                generator</a></li>
-            <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
-                aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
-            </li>
-            <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
-                aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div>
-        <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+              <!-- These below are useful links that help me alot- I also encourage you to go through them-->
+              <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
+                  aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
+              </li>
+              <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
+                  aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
+              <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
+                  aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
+              <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
+                  aria-label="undraw page (opens in a new tab)"> undraw</a></li>
+              <li><a href="https://coolors.co" target="_blank" rel="noopener"
+                  aria-label="Visit  color palette page (opens in a new tab)"> palette
+                  generator</a></li>
+              <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
+                  aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
+              </li>
+              <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
+                  aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+        </div>
       </div>
     </div>
-
   </footer>
-
   <!--fontawsone kit-->
   <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
   <script src="./assets/main.js"></script>
 </body>
-
 </html>
