--- a/signup.html
+++ b/signup.html
@@ -63,7 +63,7 @@
       <label for="yearly">Yearly Newsletter</label>
       <input type="radio" id="yearly" name="subcription_preference" value="yearly" required>
       <br>
-      <!--<textarea id="msg" rows="5" cols="40" name="comment" form="usrform">
+      <textarea id="msg" rows="5" cols="40" name="comment" form="usrform">
                comment here...</textarea>-->
 
       <input class="button" type="submit" value="submit!">
