Update Readme document

--- a/blog.html
+++ b/blog.html
@@ -52,10 +52,10 @@
             <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
                             fruit and vegetable">
             <div class="text-block">
-              <h2 fs-primary-heading>The Blog,  Briefcase for your Health</h2>
+              <h2 class="fs-primary-heading text-center">The Blog</h2>
             </div>
             <div class="text-b">
-              <h3 class="padding-block-900  margin-bottom-900  text-center  padding-block-700  fs-secondary-heading  fw-bold">Recent Posts</h3>
+              <h3 class=" text-center  padding-block-400  fs-secondary-heading  fw-bold">Recent Posts</h3>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="blog-row">
-          <h2padding-block-900 margin-bottom-900 text-center padding-block-700 fs-secondary-heading fw-bold >Popular Posts</h2>
+          <h2 class="padding-block-400   text-center  padding-block-700    fw-bold" >Popular Posts</h2>
     
           <div class="blog-column">
             <div class="blog">
@@ -138,7 +138,7 @@
           </div>
 
           <div class="blog-row">
-            <h2 class="padding-block-900 margin-bottom-900 text-center padding-block-700 fs-secondary-heading fw-bold" >Testimonies</h2>
+            <h2 class="padding-block-900 margin-bottom-900 text-center padding-block-700 fw-bold" >Testimonies</h2>
     
             <div class="blog-column">
               <div class="blog">
